--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -6,7 +6,7 @@
         </div>
         <div class="pic-edit ">
             <div class="abc ">
-                <img src="img/profilepic.jpg ">
+                <img src="{{user.image}}">
                 <div class="picsupload "><a href="# ">Upload Picture</a>
                 </div>
             </div>
