--- a/templates/home.html
+++ b/templates/home.html
@@ -13,10 +13,10 @@
         </div>
         <div class="home-content">
             <div class="home-name">
-                <h5>Lauren Paul</h5>
+                <h5>{{user.name}}</h5>
             </div>
-            <i class="icon icon-medal">&nbsp;</i>Rank 3
-            <i class="icon icon-star">&nbsp;</i>Score:10
+            <i class="icon icon-medal">&nbsp;</i>Rank {{user.rank}}
+            <i class="icon icon-star">&nbsp;</i>Score:{{user.score}}
             <hr class="dividhome">
         </div>
         <div class="home-profile">
