--- a/templates/menu.html
+++ b/templates/menu.html
@@ -65,6 +65,10 @@
                     <span class="ion-trophy tac" title="leaderboard" aria-hidden="true"></span>
                     <div class="head-text">Leader Board</div>
                 </ion-item>
+                <ion-item nav-clear menu-close class="menumain" ng-click="logoutapp()">
+                    <span class="ion-logout tac" title="leaderboard" aria-hidden="true"></span>
+                    <div class="head-text">Logout</div>
+                </ion-item>
             </ion-list>
         </ion-content>
     </ion-side-menu>
