--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -172,7 +172,12 @@
                     </div>
                 </div>
             </div>
-            <div class="bar bar-footer">
+            
+
+        </div>
+    </ion-content>
+	<ion-footer>
+	<div class="bar bar-footer">
                 <div class="row like-comnt leader">
                     <div class="col col-33 bod-right">
                         <h5>
@@ -192,7 +197,5 @@
                     </div>
                 </div>
             </div>
-
-        </div>
-    </ion-content>
+			</ion-footer>
 </ion-view>
