--- a/templates/postinfo.html
+++ b/templates/postinfo.html
@@ -76,7 +76,10 @@
                 </ion-slide>
             </ion-slide-box>
         </div>
-        <div class="bar bar-footer">
+     
+    </ion-content>
+	<ion-footer>
+	   <div class="bar bar-footer">
             <div class="row like-comnt">
                 <div class=" col tab-items1">
                     <a>
@@ -90,5 +93,5 @@
                 </div>
             </div>
         </div>
-    </ion-content>
+	</ion-footer>
 </ion-view>
