--- a/templates/postinfofb.html
+++ b/templates/postinfofb.html
@@ -59,7 +59,9 @@
                 </ion-slide>
             </ion-slide-box>
         </div>
-        <div class="bar bar-footer">
+    </ion-content>
+	<ion-footer>
+	        <div class="bar bar-footer">
             <div class="row like-comnt">
                 <div class="col">
                     <i class="iicon hrt-icon"></i>5
@@ -72,6 +74,5 @@
                 </div>
             </div>
         </div>
-
-    </ion-content>
+		<ion-footer>
 </ion-view>
