--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -172,30 +172,28 @@
                     </div>
                 </div>
             </div>
-            
-
         </div>
     </ion-content>
-	<ion-footer>
-	<div class="bar bar-footer">
-                <div class="row like-comnt leader">
-                    <div class="col col-33 bod-right">
-                        <h5>
+    <ion-footer-bar>
+        <div class="bar bar-footer">
+            <div class="row like-comnt leader" id="like-comnts">
+                <div class="col col-33 bod-right">
+                    <h5>
                  #1
                 </h5>
-                    </div>
-                    <div class="col col-33 bod-right">
-                        <h5>
+                </div>
+                <div class="col col-33 bod-right">
+                    <h5>
                 Lauren Paul
                 </h5>
-                    </div>
-                    <div class="col col-33 bod-right">
-                        <h5 class="score-tot">
+                </div>
+                <div class="col col-33 bod-right">
+                    <h5 class="score-tot">
                         <i class="icon-star icon-str"></i>
                 850
                 </h5>
-                    </div>
                 </div>
             </div>
-			</ion-footer>
+        </div>
+    </ion-footer-bar>
 </ion-view>
