--- a/templates/postinfo.html
+++ b/templates/postinfo.html
@@ -76,10 +76,9 @@
                 </ion-slide>
             </ion-slide-box>
         </div>
-     
     </ion-content>
-	<ion-footer>
-	   <div class="bar bar-footer">
+    <ion-footer-bar>
+        <div class="bar bar-footer">
             <div class="row like-comnt">
                 <div class=" col tab-items1">
                     <a>
@@ -93,5 +92,5 @@
                 </div>
             </div>
         </div>
-	</ion-footer>
+    </ion-footer-bar>
 </ion-view>
