--- a/templates/postinfofb.html
+++ b/templates/postinfofb.html
@@ -60,8 +60,8 @@
             </ion-slide-box>
         </div>
     </ion-content>
-	<ion-footer>
-	        <div class="bar bar-footer">
+    <ion-footer-bar>
+        <div class="bar bar-footer">
             <div class="row like-comnt">
                 <div class="col">
                     <i class="iicon hrt-icon"></i>5
@@ -74,5 +74,5 @@
                 </div>
             </div>
         </div>
-		<ion-footer>
+    </ion-footer-bar>
 </ion-view>
