--- a/templates/profile.html
+++ b/templates/profile.html
@@ -58,7 +58,7 @@
                     <a href="#/app/tablefb">
                         <div class="profile-action">
                             <p>Action Done</p>
-                            <p class="score">0</p>
+                            <p class="score">{{user.actiondone}}</p>
                         </div>
                     </a>
                     <div class="vertical-line"></div>
