--- a/templates/login.html
+++ b/templates/login.html
@@ -83,7 +83,7 @@
                                             <i class="float-left">&nbsp;&nbsp;&nbsp;</i>
                                         </div>
                                         <div class="button-side">
-                                            <button class="button icon-left ion-social-facebook button-fb">Facebook</button>
+                                            <button class="button icon-left ion-social-facebook button-fb" ng-click="facebooklogin();">Facebook</button>
                                         </div>
                                     </div>
                                     <div class="button-ticktwit">
