--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -7,8 +7,10 @@
         <div class="pic-edit ">
             <div class="abc ">
                 <img src="{{user.image}}">
+<!--
                 <div class="picsupload "><a href="# ">Upload Picture</a>
                 </div>
+-->
             </div>
         </div>
         <div class="edit-cont ">
@@ -67,7 +69,7 @@
                                     <input type="text " placeholder="Birth of Date " ng-model="profile.dob">
                                 </label>
                                 <div class="btn-save">
-								<button class="button button-small button-positive savebtn" ng-click="saveprofile(proile)">
+								<button class="button button-small button-positive savebtn" ng-click="saveprofile(profile)">
 									Save
 								</button>
 								</div>
